# TimeCast

./: README.md  pyproject.toml
_bin/: demo.sh
_dat/: README.md
_out/Engine/timecast/w_20/alpha_0.1/beta_w_0.1/k_5/iter_100/init_/folds_0/tag_demo/: TimeCast.dill  summary.json
_out/Engine/timecast/w_20/alpha_1/beta_w_0.1/k_5/iter_100/init_/folds_0/tag_demo/: TimeCast.dill  summary.json
_src/: utils.py
_src/timecast/: TimeCast.py  graphical_lasso.py  main.py  wiener.py
